--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
     <header>
         <nav>
-            <a href="http://finale11/Ye_spiritual.html" class="active" style="color: #fefefe;" id="head0">Home</a>
+            <a href="http://finale11/index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
             <a href="http://finale11/yespiritual_about.html" style="color: #fefefe;">About</a>
             <a href="http://finale11/yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
             <a href="http://finale11/table.html" style="color: #fefefe;">Table</a>
