--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body> 
     <header>
         <nav>
-            <a href="http://finale11/index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
+            <a href="http://index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
             <a href="http://yespiritual_about.html" style="color: #fefefe;">About</a>
-            <a href="http://finale11/yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
-            <a href="http://finale11/table.html" style="color: #fefefe;">Table</a>
-            <a href="https://finale11/form.html">Form</a>
-            <a href="https://finale11/pasport.html" style="color:#fefefe">passport</a>
-            <a href="https://finale11/riddle.html" style="color:#fefefe">algorithmic task</a>
-            <a href="https://finale11/photo_resize.html" style="color:#ffffff">image resize</a>
+            <a href="http://yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
+            <a href="http://table.html" style="color: #fefefe;">Table</a>
+            <a href="https://form.html">Form</a>
+            <a href="https://pasport.html" style="color:#fefefe">passport</a>
+            <a href="https://riddle.html" style="color:#fefefe">algorithmic task</a>
+            <a href="https://photo_resize.html" style="color:#ffffff">image resize</a>
             <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
         </nav>
     </header>
