--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="http://index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
-            <a href="http://yespiritual_about.html" style="color: #fefefe;">About</a>
+            <a href="http://page1.html" style="color: #fefefe;">About</a>
             <a href="http://yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
             <a href="http://table.html" style="color: #fefefe;">Table</a>
             <a href="https://form.html">Form</a>
