--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body> 
     <header>
         <nav>
-            <a href="http://index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
-            <a href="http://page1.html" style="color: #fefefe;">About</a>
-            <a href="http://yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
-            <a href="http://table.html" style="color: #fefefe;">Table</a>
-            <a href="https://form.html">Form</a>
-            <a href="https://pasport.html" style="color:#fefefe">passport</a>
-            <a href="https://riddle.html" style="color:#fefefe">algorithmic task</a>
-            <a href="https://photo_resize.html" style="color:#ffffff">image resize</a>
+            <a href="index.html" class="active" style="color: #fefefe;" id="head0">Home</a>
+            <a href="page1.html" style="color: #fefefe;">About</a>
+            <a href="yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
+            <a href="table.html" style="color: #fefefe;">Table</a>
+            <a href="form.html">Form</a>
+            <a href="pasport.html" style="color:#fefefe">passport</a>
+            <a href="riddle.html" style="color:#fefefe">algorithmic task</a>
+            <a href="photo_resize.html" style="color:#ffffff">image resize</a>
             <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
         </nav>
     </header>
