--- a/page1.html
+++ b/page1.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <nav>
-            <a href="http://finale11/index.html" style="color: #fefefe;" id="head0">Home</a>
-            <a href="http://finale11/yespiritual_about.html" class="active" style="color: #fefefe;">About</a>
-            <a href="http://finale11/yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
-            <a href="http://finale11/table.html" style="color: #fefefe;">Table</a>
-            <a href="https://finale11/form.html">Form</a>
-            <a href="https://finale11/pasport.html" style="color:#fefefe">passport</a>
-            <a href="https://finale11/riddle.html" style="color:#fefefe">algorithmic task</a>
-            <a href="https://finale11/photo_resize.html" style="color:#ffffff">image resize</a>
-            <a href="https://bully.yeezy.com/" target = '_blank'>Ye's website</a>
+            <a href="index.html"  style="color: #fefefe;" id="head0">Home</a>
+            <a href="page1.html" class="active" style="color: #fefefe;">About</a>
+            <a href="yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
+            <a href="table.html" style="color: #fefefe;">Table</a>
+            <a href="form.html">Form</a>
+            <a href="pasport.html" style="color:#fefefe">passport</a>
+            <a href="riddle.html" style="color:#fefefe">algorithmic task</a>
+            <a href="photo_resize.html" style="color:#ffffff">image resize</a>
+            <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
         </nav>
     </header>
     <header>
