--- a/photo_resize.html
+++ b/photo_resize.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="http://finale11/Ye_spiritual.html" style="color: #000000;" id = 'head0'>Home</a>
-            <a href="http://finale11/yespiritual_about.html" style="color: #000000;">About</a>
-            <a href="http://finale11/yespiritual_funny.html" style="color: #000000;">Funny pics</a>
-            <a href="http://finale11/table.html" style="color: #000000;">Table</a>
-            <a href="https://finale11/form.html" style="color:#000000">Form</a>
-            <a href="https://finale11/pasport.html" style="color:#000000">Passport</a>
-            <a href="https://finale11/photo_resize.html" class="active" style="color:#000000">image resize</a>
-            <a href="https://bully.yeezy.com/" target = '_blank'>Ye's website</a>
+            <a href="index.html"  style="color: #fefefe;" id="head0">Home</a>
+            <a href="page1.html" style="color: #fefefe;">About</a>
+            <a href="yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
+            <a href="table.html" style="color: #fefefe;">Table</a>
+            <a href="form.html">Form</a>
+            <a href="pasport.html"  style="color:#fefefe">passport</a>
+            <a href="riddle.html" style="color:#fefefe">algorithmic task</a>
+            <a href="photo_resize.html" class="active" style="color:#ffffff">image resize</a>
+            <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
         </nav>
     </header>
     <a href="css1/ye_bag.jpg" onclick="openCenteredWindow(event, 'css1/ye_bag.jpg')">
