--- a/form.html
+++ b/form.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" style="color: #fefefe;" id="head0">Home</a>
-            <a href="page1.html" style="color: #fefefe;">About</a>
-            <a href="yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
-            <a href="table.html" style="color: #fefefe;">Table</a>
+            <a href="index.html" style="color: #000000;" id="head0">Home</a>
+            <a href="page1.html" style="color: #000000;">About</a>
+            <a href="yespiritual_funny.html" style="color: #000000;">Funny pics</a>
+            <a href="table.html" style="color: #000000;">Table</a>
             <a href="form.html" class="active">Form</a>
-            <a href="pasport.html" style="color:#fefefe">passport</a>
-            <a href="riddle.html" style="color:#fefefe">algorithmic task</a>
-            <a href="photo_resize.html" style="color:#ffffff">image resize</a>
+            <a href="pasport.html" style="color:#000000">passport</a>
+            <a href="riddle.html" style="color:#000000">algorithmic task</a>
+            <a href="photo_resize.html" style="color:#000000">image resize</a>
             <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
         </nav>
     </header>
