--- a/riddle.html
+++ b/riddle.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Определение знака числа</title>
-    <link href="css1/style_passport.css" rel="stylesheet"
+    <link href="css1/style_passport.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"  style="color: #000000;" id="head0">Home</a>
+            <a href="index.html" style="color: #000000;" id="head0">Home</a>
             <a href="page1.html" style="color: #000000;">About</a>
             <a href="yespiritual_funny.html" style="color: #000000;">Funny pics</a>
             <a href="table.html" style="color: #000000;">Table</a>
             <a href="form.html">Form</a>
-            <a href="riddle.html" class="active"  style="color:#000000">algorithmic task</a>
+            <a href="riddle.html" class="active" style="color:#000000">algorithmic task</a>
             <a href="photo_resize.html" style="color:#000000">image resize</a>
-            <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
+            <a href="https://bully.yeezy.com/" target="_blank">Ye's website</a>
         </nav>
-        </header>
+    </header>
+
     <form action="https://www.google.com/search?" id="UserEnter" name="UserEnter" target="_blank">
         <p><input type="hidden" name="q" value="search"></p>
         <p id="task">Дано вещественное число. Определить, какое это число: положительное, отрицательное, ноль.</p>
@@ -26,32 +27,33 @@
         <button type="button" id="checkButton">Проверить</button>
         <p id="result"></p>
         <p id="error" style="color: red;"></p>
-    <script>
-        document.getElementById('checkButton').addEventListener('click', function() {
-            // Получаем введенное число
-            const inputNumber = parseFloat(document.getElementById('numberInput').value);
-            let resultMessage = '';
+        
+        <script>
+            document.getElementById('checkButton').addEventListener('click', function() {
+                // Получаем введенное число
+                const inputNumber = parseFloat(document.getElementById('numberInput').value);
+                let resultMessage = '';
 
-            // Проверка числа
-            if (inputNumber > 0) {
-                resultMessage = 'Положительное число';
-            } else if (inputNumber < 0) {
-                resultMessage = 'Отрицательное число';
-            } else {
-                resultMessage = 'Ноль';
-            }
+                // Проверка числа
+                if (inputNumber > 0) {
+                    resultMessage = 'Положительное число';
+                } else if (inputNumber < 0) {
+                    resultMessage = 'Отрицательное число';
+                } else {
+                    resultMessage = 'Ноль';
+                }
 
-            // Отображение результата на странице
-            const taskText = document.getElementById('task').innerText;
-            document.getElementById('result').innerText = `Результат: '${taskText} - ${resultMessage}`;
+                // Отображение результата на странице
+                document.getElementById('result').innerText = `Результат: ${resultMessage}`;
 
-            // Установка значения в параметр q для Google
-            document.getElementById('UserEnter').querySelector('input[name="q"]').value = resultMessage;
+                // Установка значения в параметр q для Google, включая текст из параграфа 'task'
+                const taskText = document.getElementById('task').innerText;
+                document.getElementById('UserEnter').querySelector('input[name="q"]').value = `${taskText} - ${resultMessage}`;
 
-            // Автоматическая отправка формы
-            document.getElementById('UserEnter').submit();
-        });
-    </script>
+                // Автоматическая отправка формы
+                document.getElementById('UserEnter').submit();
+            });
+        </script>
     </form>
 </body>
 </html>
