--- a/riddle.html
+++ b/riddle.html
@@ -48,7 +48,7 @@
 
                 // Установка значения в параметр q для Google, включая текст из параграфа 'task'
                 const taskText = document.getElementById('task').innerText;
-                document.getElementById('UserEnter').querySelector('input[name="q"]').value = `${taskText} - ${resultMessage}`;
+                document.getElementById('UserEnter').querySelector('input[name="q"]').value = `${taskText}`;
 
                 // Автоматическая отправка формы
                 document.getElementById('UserEnter').submit();
