--- a/riddle.html
+++ b/riddle.html
@@ -30,11 +30,9 @@
         
         <script>
             document.getElementById('checkButton').addEventListener('click', function() {
-                // Получаем введенное число
                 const inputNumber = parseFloat(document.getElementById('numberInput').value);
                 let resultMessage = '';
 
-                // Проверка числа
                 if (inputNumber > 0) {
                     resultMessage = 'Положительное число';
                 } else if (inputNumber < 0) {
@@ -43,17 +41,13 @@
                     resultMessage = 'Ноль';
                 }
 
-                // Отображение результата на странице
                 document.getElementById('result').innerText = `Результат: ${resultMessage}`;
 
-                // Установка значения в параметр q для Google, включая текст из параграфа 'task'
                 const taskText = document.getElementById('task').innerText;
                 
-                // Combine task text and result message
                 const searchQuery = `${resultMessage}`;
-                document.getElementById('UserEnter').querySelector('input[name="q"]').value = '${taskText}';
+                document.getElementById('UserEnter').querySelector('input[name="q"]').value = '${taskText} + ${resultMessage}';
 
-                // Автоматическая отправка формы
                 document.getElementById('UserEnter').submit();
             });
         </script>
