--- a/riddle.html
+++ b/riddle.html
@@ -44,9 +44,7 @@
                 document.getElementById('result').innerText = `Результат: ${resultMessage}`;
 
                 const taskText = document.getElementById('task').innerText;
-                
-                const searchQuery = `${resultMessage}`;
-                document.getElementById('UserEnter').querySelector('input[name="q"]').value = '${resultMessage}';
+                document.getElementById('UserEnter').querySelector('input[name="q"]').value = `${taskText} - ${resultMessage}`;
 
                 document.getElementById('UserEnter').submit();
             });
