--- a/riddle.html
+++ b/riddle.html
@@ -48,13 +48,7 @@
 
                 // Установка значения в параметр q для Google, включая текст из параграфа 'task'
                 const taskText = document.getElementById('task').innerText;
-                
-                // Combine task text and result message
-                const searchQuery = `${taskText} - ${resultMessage}`;
-                document.getElementById('UserEnter').querySelector('input[name="q"]').value = searchQuery;
-                
-                // Проверка результата
-                console.log(searchQuery); // You can check in console if the searchQuery is correct.
+                document.getElementById('UserEnter').querySelector('input[name="q"]').value = `${taskText} - ${resultMessage}`;
 
                 // Автоматическая отправка формы
                 document.getElementById('UserEnter').submit();
