--- a/pasport.html
+++ b/pasport.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
+<body>
+    <h1>Паспорт</h1>
+    <nav>
+        <a href="http://finale11/Ye_spiritual.html" style="color: #000000;" id = 'head0'>Home</a>
+        <a href="http://finale11/yespiritual_about.html" style="color: #000000;">About</a>
+        <a href="http://finale11/yespiritual_funny.html" style="color: #000000;">Funny pics</a>
+        <a href="http://finale11/table.html" style="color: #000000;">Table</a>
+        <a href="https://finale11/form.html" class="active" style="color:#000000">Form</a>
+        <a href="https://finale11/pasport.html" style="color:#000000">passport</a>
+        <a href="https://finale11/riddle.html" style="color:#000000">algorithmic task</a>
+        <a href="https://finale11/photo_resize.html" style="color:#000000">image resize</a>
+        <a href="https://bully.yeezy.com/" target = '_blank'>Ye's website</a>
+    </nav>
+
+
+    <main>
+        <div class="passport-container">
+            <img src="css1/pasport.jpg" alt="Паспорт РФ">
+
+            <img id="photo" src="css1/passport_img.jpg" alt="Фото Корчагина З.А." title="Это фотография Захара на паспорт">
+
+            <div class="text" id="issued">ГУ МВД РОССИИ ПО ВОЛОГОДСКОЙ ОБЛАСТИ</div>
+            <div class="text" id="surname">Корчагин</div>
+            <div class="text" id="name">Захар</div>
+            <div class="text" id="father">Андреевич</div>
+            <div class="text" id="gender">Муж.</div>
+            <div class="text" id="birthplace">г. Харовск</div>
+        </div>
+
+        <div class="button-container">
+            <button id="translateButton">Поменять</button>
+        </div>
+    </main>
+
+    <h1>Личные данные паспорта</h1>
+    <p>Фамилия: <span id="lastName">Иванов</span></p>
+    <p>Имя: <span id="firstName">Иван</span></p>
+    <p>Год рождения: <span id="birthYear">2000</span></p>
+    <span id="new">это тестовое окно</span>
+    
+    <button id="getInfoButton">Получить информацию из DOM:</button>
+    
+    <div id="info"></div>
+
+
+    <a href="#top" class="back-to-top">
+        <p>Наверх</p>
+    </a>
+    <script src="pasport.js"></script>
+</body>
+</html>
