--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
             <a href="yespiritual_funny.html" style="color: #000000;">Funny pics</a>
             <a href="table.html" style="color: #000000;">Table</a>
             <a href="form.html" class="active">Form</a>
+            <a href="pasport.html"></a>
             <a href="riddle.html" style="color:#000000">algorithmic task</a>
             <a href="photo_resize.html" style="color:#000000">image resize</a>
             <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
