--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="yespiritual_funny.html" style="color: #fefefe;">Funny pics</a>
             <a href="table.html" style="color: #fefefe;">Table</a>
             <a href="form.html">Form</a>
+            <a href="pasport.html"></a>
             <a href="riddle.html" style="color:#fefefe">algorithmic task</a>
             <a href="photo_resize.html" style="color:#ffffff">image resize</a>
             <a href="https://bully.yeezy.com/"target = '_blank'>Ye's website</a>
