--- a/pasport.html
+++ b/pasport.html
@@ -40,9 +40,9 @@
     </main>
 
     <h1>Личные данные паспорта</h1>
-    <p>Фамилия: <span id="lastName">Иванов</span></p>
-    <p>Имя: <span id="firstName">Иван</span></p>
-    <p>Год рождения: <span id="birthYear">2000</span></p>
+    <p>Фамилия: <span id="lastName">Корчагин</span></p>
+    <p>Имя: <span id="firstName">Захар</span></p>
+    <p>Год рождения: <span id="birthYear">2005</span></p>
     <span id="new">это тестовое окно</span>
     
     <button id="getInfoButton">Получить информацию из DOM:</button>
